# game

./: .gitignore  Makefile  QUICKSTART.md  README.md  docker-compose.yml  env.example  setup-env.sh  start.sh
back/: .env.ci  .env.test  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  pyproject.toml
back/.cursor/rules/: custom.mdc
back/src/: app.py  dev.py  main.py
back/src/api/: router.py
back/src/api/v1/: dummy.py  game.py
back/src/core/: database.py  exceptions.py  lifespan.py  logger.py  monitoring.py  prometheus.py  requests.py  sentry.py  settings.py
back/src/db/: dependencies.py  meta.py
back/src/db/crud/: dummy.py  game_session.py
back/src/db/migrations/: env.py
back/src/db/migrations/versions/: 2023-12-04-20-34_b267ecb9423c.py  2025-07-13-23-19_741569d1fbee.py  2025-07-28-00-54_3d237950df56.py  2025-07-28-09-39_64f1cc6585b7.py
back/src/db/models/: dummy.py  game_session.py
back/src/schemas/: base.py  dummy.py  game.py
back/src/services/: __init__.py  blackjack.py
back/tests/: conftest.py  test_dummy.py
blackjack_new/: Dockerfile  package-lock.json  package.json  webpack.config.js
blackjack_new/src/: main.js
blackjack_new/src/core/: Audio.js
blackjack_new/src/startup/: config.js
front/: .dockerignore  DOCKER.md  Dockerfile  Dockerfile.dev  Makefile  README.md  nginx.conf  package-lock.json  package.json  setup.sh  vite.config.js
front/public/game/: Dockerfile  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.js
front/src/: App.jsx  data.js  index.css
game/: .dockerignore  .gitignore  Dockerfile  Dockerfile.optimized  index.html  nginx.conf  vite.config.js
game_new/: .dockerignore  .gitignore  Dockerfile  Dockerfile.multi  Makefile  package.json
game_new/scripts/: build.mjs
traefik/: config.yaml  docker-compose-traefik.yml  traefik.yaml
(+21 files in other folders)
